mail register ADDED

--- a/public/afterOrder.html
+++ b/public/afterOrder.html
@@ -126,14 +126,23 @@
 
 
         <div class="content">
-            <h1>Привіт, {{username}}!</h1>
-            <p>Дякуємо, що приєдналися до нашої спільноти на сайті <strong>INRO</strong>. </p>
-            <p>Відтепер ви маєте доступ до особистого кабінету, де можна:</p>
-            <ul>
-                <li>Переглядати та відстежувати свої замовлення;</li>
-                <li>Керувати особистими даними та налаштуваннями доступу;</li>
-                <li>Створювати нові замовлення та користуватися додатковими функціями.</li>
+            <h1>Дякуємо за покупку!</h1>
+            <p>Замовлення <strong>10069</strong>. </p>
+            <p>Ми вже готуємо ваше замовлення.</p>
+            <p>Товари:</p>
+            <ul class="list">
+                <li>
+                    <div>
+                        <img src="" alt="">
+                        <div>
+                            <p>Парфумована свічка “ARRONE”</p>
+                            <span>₴ 750</span>
+                        </div>
+                    </div>
+                </li>
             </ul>
+            <p>Спосіб оплати та доставки: оплата при отриманні </p>
+            <p>Сума: <strong>₴ 2250</strong> </p>
             <p>Раді вас бачити серед наших клієнтів! </p>
             <a href="https://inro.com.ua/account" class="myAccount">Мій кабінет</a>
         </div>
