--- a/public/afterRegister.html
+++ b/public/afterRegister.html
@@ -143,7 +143,7 @@
             <p class="footer-1">Якщо у вас виникнуть питання, ми завжди поруч. </p>
             <ul class="list">
                 <li><a href="https://inro.com.ua/contact">Контакти</a></li>
-                <li><a href="#">Обмін та повернення</a></li>
+                <li><a href="https://inro.com.ua/contact/obmin-ta-povernennya">Обмін та повернення</a></li>
                 <li><a href="https://inro.com.ua/horeca">Для бізнесу </a></li>
                 <li><a href="https://inro.com.ua/account">Вхід в кабінет</a></li>
             </ul>
